Klara och uppladdade
Homepage, profile och det runt profile laddas upp. De är sammankopplade men behöver kopplas samman med login. Två sidor är tomma pga kopplas till databasen som inte är gjord än

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Math Solution Forgot</string>
+    <string name="app_name">MathSolutionHomepage</string>
 </resources>
