Har nu lagt till databasen så att den fungerar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -126,5 +126,7 @@
     <string name="h_gskoleingenj_r_i_maskinteknik">Högskoleingenjör i maskinteknik</string>
     <string name="spelprogrammering">Spelprogrammering</string>
     <string name="other_education">Other Education</string>
+    <string name="textview">TextView</string>
+    <string name="_100">100</string>
 </resources>
 
