Nu går det att hämta och visa bilder från databasen samt försökt implementera Menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,7 @@
     <string name="other_education">Other Education</string>
     <string name="textview">TextView</string>
     <string name="_100">100</string>
+    <string name="drawerOpen" />
+    <string name="drawerClose" />
 </resources>
 
